--- a/package.json
+++ b/package.json
@@ -10,80 +10,84 @@
   "author": "Ragini Mishra",
   "license": "ISC",
   "dependencies": {
-    "ansi-styles": "^3.2.1",
-    "babel-plugin-macros": "^3.1.0",
-    "bcryptjs": "^2.4.3",
-    "browserslist": "^4.21.5",
-    "callsites": "^3.1.0",
-    "caniuse-lite": "^1.0.30001451",
-    "chalk": "^2.4.2",
-    "clsx": "^1.2.1",
-    "color-convert": "^1.9.3",
-    "color-name": "^1.1.3",
-    "config": "^3.3.9",
-    "convert-source-map": "^1.9.0",
-    "cors": "^2.8.5",
-    "cosmiconfig": "^7.1.0",
-    "csstype": "^3.1.1",
-    "debug": "^4.3.4",
-    "dom-helpers": "^5.2.1",
-    "dotenv": "^16.0.3",
-    "electron-to-chromium": "^1.4.289",
-    "error-ex": "^1.3.2",
-    "escalade": "^3.1.1",
-    "escape-string-regexp": "^4.0.0",
-    "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
-    "express-validator": "^6.15.0",
-    "find-root": "^1.1.0",
-    "function-bind": "^1.1.1",
-    "gensync": "^1.0.0-beta.2",
-    "globals": "^11.12.0",
-    "has": "^1.0.3",
-    "has-flag": "^3.0.0",
-    "hoist-non-react-statics": "^3.3.2",
-    "import-fresh": "^3.3.0",
-    "is-arrayish": "^0.2.1",
-    "is-core-module": "^2.11.0",
-    "js-tokens": "^4.0.0",
-    "jsesc": "^2.5.2",
-    "json-parse-even-better-errors": "^2.3.1",
-    "json5": "^2.2.3",
-    "jsonwebtoken": "^9.0.0",
-    "lines-and-columns": "^1.2.4",
-    "loose-envify": "^1.4.0",
-    "lru-cache": "^5.1.1",
-    "mongoose": "^7.0.1",
-    "ms": "^2.1.2",
-    "multer": "^1.4.5-lts.1",
-    "node-releases": "^2.0.10",
-    "object-assign": "^4.1.1",
-    "parent-module": "^1.0.1",
-    "parse-json": "^5.2.0",
-    "path": "^0.12.7",
-    "path-parse": "^1.0.7",
-    "path-type": "^4.0.0",
-    "picocolors": "^1.0.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-is": "^18.2.0",
-    "react-transition-group": "^4.4.5",
-    "regenerator-runtime": "^0.13.11",
-    "resolve": "^1.22.1",
-    "resolve-from": "^4.0.0",
-    "scheduler": "^0.23.0",
-    "semver": "^6.3.0",
-    "source-map": "^0.5.7",
-    "stylis": "^4.1.3",
-    "supports-color": "^5.5.0",
-    "supports-preserve-symlinks-flag": "^1.0.0",
-    "to-fast-properties": "^2.0.0",
-    "update-browserslist-db": "^1.0.10",
-    "yallist": "^3.1.1",
-    "yaml": "^1.10.2"
+    "ansi-styles": "3.2.1",
+    "babel-plugin-macros": "3.1.0",
+    "bcryptjs": "2.4.3",
+    "body-parser": "2.2.0",
+    "browserslist": "4.21.5",
+    "callsites": "3.1.0",
+    "caniuse-lite": "1.0.30001451",
+    "chalk": "2.4.2",
+    "clsx": "1.2.1",
+    "color-convert": "1.9.3",
+    "color-name": "1.1.3",
+    "config": "3.3.9",
+    "convert-source-map": "1.9.0",
+    "cookie-parser": "1.4.7",
+    "cors": "2.8.5",
+    "cosmiconfig": "7.1.0",
+    "csstype": "3.1.1",
+    "debug": "4.3.4",
+    "dom-helpers": "5.2.1",
+    "dotenv": "17.2.2",
+    "electron-to-chromium": "1.4.289",
+    "error-ex": "1.3.2",
+    "escalade": "3.1.1",
+    "escape-string-regexp": "4.0.0",
+    "express": "4.21.2",
+    "express-fileupload": "1.4.0",
+    "express-validator": "6.15.0",
+    "find-root": "1.1.0",
+    "function-bind": "1.1.1",
+    "gensync": "1.0.0-beta.2",
+    "globals": "11.12.0",
+    "has": "1.0.3",
+    "has-flag": "3.0.0",
+    "hoist-non-react-statics": "3.3.2",
+    "import-fresh": "3.3.0",
+    "is-arrayish": "0.2.1",
+    "is-core-module": "2.11.0",
+    "js-tokens": "4.0.0",
+    "jsesc": "2.5.2",
+    "json-parse-even-better-errors": "2.3.1",
+    "json5": "2.2.3",
+    "jsonwebtoken": "9.0.0",
+    "lines-and-columns": "1.2.4",
+    "loose-envify": "1.4.0",
+    "lru-cache": "5.1.1",
+    "mongoose": "7.0.1",
+    "ms": "2.1.2",
+    "mssql": "11.0.1",
+    "multer": "1.4.5-lts.1",
+    "node-releases": "2.0.10",
+    "object-assign": "4.1.1",
+    "parent-module": "1.0.1",
+    "parse-json": "5.2.0",
+    "path": "0.12.7",
+    "path-parse": "1.0.7",
+    "path-type": "4.0.0",
+    "pg": "8.16.3",
+    "picocolors": "1.0.0",
+    "prop-types": "15.8.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-is": "18.2.0",
+    "react-transition-group": "4.4.5",
+    "regenerator-runtime": "0.13.11",
+    "resolve": "1.22.1",
+    "resolve-from": "4.0.0",
+    "scheduler": "0.23.0",
+    "semver": "6.3.0",
+    "source-map": "0.5.7",
+    "stylis": "4.1.3",
+    "supports-color": "5.5.0",
+    "supports-preserve-symlinks-flag": "1.0.0",
+    "to-fast-properties": "2.0.0",
+    "update-browserslist-db": "1.0.10",
+    "yallist": "3.1.1",
+    "yaml": "1.10.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "2.0.22"
   }
 }
