--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "author": "Ragini Mishra",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "ansi-styles": "3.2.1",
     "babel-plugin-macros": "3.1.0",
@@ -38,6 +39,7 @@
     "express-fileupload": "1.4.0",
     "express-validator": "6.15.0",
     "find-root": "1.1.0",
+    "firebase-admin": "^13.5.0",
     "function-bind": "1.1.1",
     "gensync": "1.0.0-beta.2",
     "globals": "11.12.0",
@@ -90,4 +92,5 @@
   "devDependencies": {
     "nodemon": "2.0.22"
   }
+  
 }
